# bus-booking-app

./: README.md  pyproject.toml
app/api/: permissions.py  serializers.py  urls.py  views.py
app/api/tests/: test_partner_api.py  test_user_api.py
app/app/: settings.py  urls.py
app/core/: admin.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
app/core/migrations/: 0001_initial.py  0002_initial.py  0003_alter_bus_licence_plate.py  0003_alter_trip_price.py  0004_alter_bus_brand_delete_brand.py  0004_remove_ticket_buyer.py  0005_ticket_returned_alter_bus_brand.py  0006_ticket_payed.py  0007_remove_ticket_payed.py  0008_partner_sub_account.py  0009_remove_partner_sub_account_partner_is_sub_account.py  0010_remove_partner_is_sub_account.py  0011_alter_station_number.py
app/core/templates/core/: 403.html  404.html  base.html  checkout.html  index.html  ticket.html
app/core/templatetags/: my_filters.py
app/partner/: forms.py  urls.py  views.py
app/partner/templates/partner/: already_returned.html  base.html  bus.html  bus_create.html  bus_list.html  confirm_return.html  future_trips.html  profile.html  registration.html  station_create.html  station_list.html  sub_account_registration.html  sub_accounts.html  ticket_partner_profile.html  trip_create.html  trip_update.html  trips_base.html  trips_list.html
app/templates/partials/: nav-bar.html
app/user/: admin.py  forms.py  models.py  urls.py  views.py
app/user/migrations/: 0001_initial.py  0002_user_is_sub_account.py
app/user/templates/user/: base.html  (+10 more)
app/user/tests/: test_user.py
(+9 files in other folders)
